重构step1: 1 状态转移活用 70% 2 add/modify/duplicate/del/undo功能 30%

--- a/AnimeTidy/AnimeTidy/AnimeTidy.csproj
+++ b/AnimeTidy/AnimeTidy/AnimeTidy.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Forms\AddAnime.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\EditAnime.cs">
+    <Compile Include="Forms\AniEditor.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Cores\AnimeInfo.cs" />
@@ -56,6 +56,9 @@
     </Compile>
     <Compile Include="EditForm.Designer.cs">
       <DependentUpon>EditForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\ModAnime.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
