--- a/AnimeTidy/AnimeTidy/AnimeTidy.csproj
+++ b/AnimeTidy/AnimeTidy/AnimeTidy.csproj
@@ -43,6 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FindForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FindForm.Designer.cs">
+      <DependentUpon>FindForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\AddAnime.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +74,8 @@
     </Compile>
     <Compile Include="Models\AirSeason.cs" />
     <Compile Include="Models\Anime.cs" />
+    <Compile Include="Models\AnimeViewOverlay.cs" />
+    <Compile Include="Models\MatchKind.cs" />
     <Compile Include="Models\MediaType.cs" />
     <Compile Include="Models\MergeFormat.cs" />
     <Compile Include="Models\Metadata.cs" />
@@ -86,6 +94,9 @@
     </Compile>
     <EmbeddedResource Include="EditForm.resx">
       <DependentUpon>EditForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FindForm.resx">
+      <DependentUpon>FindForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
