--- a/AnimeTidy/AnimeTidy/AnimeTidy.csproj
+++ b/AnimeTidy/AnimeTidy/AnimeTidy.csproj
@@ -43,11 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FindForm.cs">
+    <Compile Include="ComTab.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="FilterForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FindForm.Designer.cs">
-      <DependentUpon>FindForm.cs</DependentUpon>
+    <Compile Include="FilterForm.Designer.cs">
+      <DependentUpon>FilterForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\AddAnime.cs">
       <SubType>Form</SubType>
@@ -86,17 +89,17 @@
     <Compile Include="Models\TidyXml.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TabAnime.cs">
+    <Compile Include="Tabs\TabAnime.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="TabAnime.Designer.cs">
+    <Compile Include="Tabs\TabAnime.Designer.cs">
       <DependentUpon>TabAnime.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="EditForm.resx">
       <DependentUpon>EditForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FindForm.resx">
-      <DependentUpon>FindForm.cs</DependentUpon>
+    <EmbeddedResource Include="FilterForm.resx">
+      <DependentUpon>FilterForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -111,7 +114,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="TabAnime.resx">
+    <EmbeddedResource Include="Tabs\TabAnime.resx">
       <DependentUpon>TabAnime.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config" />
