--- a/AnimeTidy/AnimeTidy/AnimeTidy.csproj
+++ b/AnimeTidy/AnimeTidy/AnimeTidy.csproj
@@ -36,8 +36,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
@@ -46,6 +44,7 @@
     <Compile Include="ComTab.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Cores\TidyXml.cs" />
     <Compile Include="FilterForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,7 +85,7 @@
     <Compile Include="Models\SubStyle.cs" />
     <Compile Include="Models\TidyConst.cs" />
     <Compile Include="Models\TidyType.cs" />
-    <Compile Include="Models\TidyXml.cs" />
+    <Compile Include="Models\XatXml.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tabs\TabAnime.cs">
