重构step2: 1 undo功能扩展(已知问题：List中修改恢复不了) 90% 2 RichTextBox更新问题

--- a/AnimeTidy/AnimeTidy/AnimeTidy.csproj
+++ b/AnimeTidy/AnimeTidy/AnimeTidy.csproj
@@ -76,7 +76,9 @@
     </Compile>
     <Compile Include="Models\AirSeason.cs" />
     <Compile Include="Models\Anime.cs" />
+    <Compile Include="Models\AnimeStack.cs" />
     <Compile Include="Models\AnimeViewOverlay.cs" />
+    <Compile Include="Models\EditType.cs" />
     <Compile Include="Models\MatchKind.cs" />
     <Compile Include="Models\MediaType.cs" />
     <Compile Include="Models\MergeFormat.cs" />
