up1: Anime数据(Store, Enjoy)变更为枚举

--- a/AnimeTidy/AnimeTidy/AnimeTidy.csproj
+++ b/AnimeTidy/AnimeTidy/AnimeTidy.csproj
@@ -79,11 +79,13 @@
     <Compile Include="Models\AnimeStack.cs" />
     <Compile Include="Models\AnimeViewOverlay.cs" />
     <Compile Include="Models\EditType.cs" />
+    <Compile Include="Models\EnjoyState.cs" />
     <Compile Include="Models\MatchKind.cs" />
     <Compile Include="Models\MediaType.cs" />
     <Compile Include="Models\MergeFormat.cs" />
     <Compile Include="Models\Metadata.cs" />
     <Compile Include="Models\Music.cs" />
+    <Compile Include="Models\StoreState.cs" />
     <Compile Include="Models\SubStyle.cs" />
     <Compile Include="Models\TidyConst.cs" />
     <Compile Include="Models\TidyType.cs" />
